Feat: Started implemented JSON + changed filestruckture Co-Authored-By Anna abdoan@stud.ntnu.no